fixed card text alignments

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -68,8 +68,10 @@ body {
   background: black;
 }
 
-.title-wrapper {
+.entryHeader {
+  padding-left: 310px;
   transform: translate(0, -25px);
+  margin-bottom: 10px;
 }
 
 .blogEntryTitle {
@@ -77,16 +79,17 @@ body {
 }
 
 .blogEntrySub {
-  transform: translate(0, -60px);
+  transform: translate(0, -40px);
   position:static;
 }
 
 .blogEntryDesc {
-  transform: translate(-40px);
+  margin-top: -35px;
+  margin-bottom: -10px;
+  padding-left: 0; 
   color: rgb(179, 179, 179);
-  position: static;
-
-  overflow-wrap: break-word;
+  max-width: 100%;
+  overflow-wrap: anywhere;
 }
 
 .blogcard {
@@ -94,7 +97,7 @@ body {
   filter: drop-shadow(6px 10px 0px #59ffff2f);
   
   padding-right: 20px;
-  padding-top: 40px;
+  padding-top: 25px;
   margin-bottom: 100px;
   width: 100%;
   max-width: 900px;
@@ -115,19 +118,14 @@ body {
   background-color: #0C0D10;
   clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 40%, 75% 0);
 
-  padding-left: 340px; /* image width + spacing */
-  padding-top: 20px;
-  padding-right: 20px;
+  padding: 20px;
 
   min-height: 260px;
   max-height: fit-content;
   width: 100%;
-  border-style: solid;
-  border-color: white;
+  border: 1px solid white;
 
 }
-
-
 
 /* Add a card effect for sidebar boxes */
 .card {
@@ -135,14 +133,6 @@ body {
    padding: 20px;
    margin-top: 20px;
    clip-path: polygon(30% 0%, 100% 0%, 100% 100%,  0% 100%, 0% 30%);
-}
-
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 /* Footer */
